@@ -4,6 +4,13 @@ This file includes a list of high level updates for each milestone release.
 
 * * *
 
+Milestone 93
+------------
+  * The default value of GrContextOptions::fReduceOpsTaskSplitting is now enabled.
+    https://review.skia.org/419836
+
+* * *
+
 Milestone 92
 ------------
   * Hides SkPathEffect::computeFastBounds() from public API; external subclasses of SkPathEffect
